# MathLibrary-tests

./: .gitignore  .gitmodules  CMakeLists.txt  MathLibrary.sln  MathLibrary.vcxproj  README.md  main.cpp  test.cpp
.github/workflows/: cmake-multi-platform.yml
src/: CorePhysics.hpp  MathFunctions.cpp  MathFunctions.hpp  Transform.cpp  Transform.hpp  World.cpp  World.hpp
